--- a/main.html
+++ b/main.html
@@ -172,17 +172,19 @@
         if(!menuSelected.length){
           let curr = $(getMenuItems[getIndex]);
           if(curr.find('a').data('arrows') !== 'no') {
-            curr.prepend($(ARROW_SPAN).text('--> ')).append($(ARROW_SPAN).text(' <--'));
+            curr.find('a').prepend($(ARROW_SPAN).text('--> ')).append($(ARROW_SPAN).text(' <--'));
           }
           curr.addClass('menu-selected');
         } else if(menuSelected.length){
           getIndex = getMenuPropertyIndex();
           if(checkIfPressed('UP', e.keyCode)) getIndex = (getIndex % getMenuItems.length) - 1;
           else if(checkIfPressed('DOWN', e.keyCode)) getIndex = (getIndex % getMenuItems.length) + 1;
+          if(getIndex < 0) getIndex = getMenuItems.length - 1;
+          else if(getIndex > getMenuItems.length - 1) getIndex = 0;
           $('.arrows').remove();
           let curr = $(getMenuItems[getIndex]);
           if(curr.find('a').data('arrows') !== 'no')
-            $(getMenuItems[getIndex]).prepend($(ARROW_SPAN).text('--> ')).append($(ARROW_SPAN).text(' <--'))
+            $(getMenuItems[getIndex]).find('a').prepend($(ARROW_SPAN).text('--> ')).append($(ARROW_SPAN).text(' <--'))
         }
         menuSelected.each((index, item) => {$(item).removeClass('menu-selected')})
         $(getMenuItems[getIndex]).find('a').addClass('menu-selected');
