--- a/game.html
+++ b/game.html
@@ -41,8 +41,8 @@
     </div>
     <div id="success" class="menu">
       <h1>Sukces!</h1>
-      <h3>Osiągnąłeś wynik:</h3>
-      <h4><span id="game-score">9999</span></h4>
+      <h3>Osiągnąłeś wynik (ilość dni):</h3>
+      <h4><span id="days">9999</span></h4>
       <h3><span><a href="#" data-action="back-to-menu">Potwierdź.</a></span></h3>
       <h3><span><a href="#" data-action="back-to-menu">Wróć do menu.</a></span></h3>
     </div>
@@ -55,6 +55,7 @@
 <script>
   const PHASE_SPAN = '<div class="phase"><span class="top"></span><span class="bottom"></span></div>';
   let currPhase = 0;
+  let days = 0;
 
   let generateSpans = (number) => {
     $('.phase').remove();
@@ -143,6 +144,7 @@
           setWaterAmount(waterAmount);
           let step = $(`[data-step=${currPhase}]`);
           step.find('.top').text('^');
+          days += 1;
         }
       } else if(checkIfPressed('LEFT', e.keyCode)){
         if(waterAmount > 0 && currPhase > 0){
@@ -151,6 +153,7 @@
           step.find('.top').text('');
           currPhase -= 1;
           setWaterAmount(waterAmount);
+          days += 1;
         }
       } else if(checkIfPressed('DOWN', e.keyCode)) {
         if(waterAmount > 1){
@@ -203,6 +206,7 @@
         if(!getWaterAmount() && currPhase > 0 && !getGameover.hasClass('curr-menu')) switchMenus('#gameover');
         else if(!currPhase) setWaterAmount(initialBasketAmount);
         else if(currPhase > distance && currentMenu.attr('id') !== 'gameover') {
+          $('#days').text(days);
           switchMenus('#success');
         }
       }
