--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <meta name="description" content="BuklakiTheGame - gra na projekt zespolowy UWM.">
     <meta name="keywords" content="Buklaki The Game">
     <meta name="author" content="Kropka">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#">
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/custom/global.css" rel="stylesheet">
