--- a/game.html
+++ b/game.html
@@ -18,9 +18,11 @@
   <div id="main-div">
     <div id="basket-amount"><span></span></div>
     <div id="status" class="menu curr-menu">
+      <div class="flex-center">
       <span class="text-start">Oaza</span>
       <div id="phases" class="text-center"></div>
       <span class="text-end">Cel</span>
+        </div>
     </div>
     <div id="pause" class="menu">
       <h1>Pauza</h1>
