--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
 
     const getScoresFromBackend = () => {
       $.ajax({
-        url: 'http://localhost:8000/get-records/',
+        url: '/buklakithebackend/get-records/',
         type: 'POST',
         success: (data) => {
             let rankingList = $('#ranking-list');
