--- a/game.html
+++ b/game.html
@@ -44,7 +44,7 @@
     </div>
     <div id="success" class="menu">
       <h1>Sukces!</h1>
-      <h3>Osiągnąłeś wynik (ilość dni):</h3>
+      <h3>Osiągnąłeś wynik (liczba dni):</h3>
       <h4><span id="days">9999</span></h4>
       <h3><span><a href="#" data-action="confirm">Potwierdź.</a></span></h3>
       <h3><span><a href="#" data-action="back-to-menu">Wróć do menu.</a></span></h3>
